se agregó header con elementos de título y botón de la sección 01

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,21 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
-  <body>
+<body>
+  <header class="container">
+    <nav class="navbar">
+      <section class="col-6 text-left">
+        <a class="navbar-brand" href="#">
+          <h1 class="navbar-brand--title">Start Bootstrap</h1>
+        </a>
+      </section>
+      <section class="col-6 text-right">
+          <button class="navbar-button" type="button" >Sign In</button>
+      </section>
+    </nav>
+  </header>
+  <section>
 
-  </body>
+  </section>
+</body>
 </html>
