estructura de seccion02 imagen de fondo, titulo, input y boton

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
-  <header class="container">
+  <header class="container" id="seccion01">
     <nav class="navbar">
       <section class="col-6 text-left">
         <a class="navbar-brand" href="#">
@@ -19,12 +19,21 @@
         </a>
       </section>
       <section class="col-6 text-right">
-          <button class="navbar-button" type="button" >Sign In</button>
+          <button class="button" type="button" >Sign In</button>
       </section>
     </nav>
   </header>
-  <section>
-
+  <section class="hero-image" id="seccion02">
+    <div class="sombra"></div>
+    <section class="container">
+    <h2 class="hero-image--tittle">Build a landing page for your bussiness or projrct and generate more leads!</h2>
+    <section class="col-8 text-right">
+        <input class="hero-input" placeholder="enter your email..."/>
+      </section>
+      <section class="col-4 text-left">
+        <button class="button hero-button">Sign Up!</button>
+    </section>
+    </section>
   </section>
 </body>
 </html>
