elementos seccion03 servicios, imagenes, titulo y párrafo

--- a/index.html
+++ b/index.html
@@ -23,17 +23,36 @@
       </section>
     </nav>
   </header>
-  <section class="hero-image" id="seccion02">
+  <section class="row hero-image" id="seccion02">
     <div class="sombra"></div>
-    <section class="container">
+    <div class="container">
     <h2 class="hero-image--tittle">Build a landing page for your bussiness or projrct and generate more leads!</h2>
-    <section class="col-8 text-right">
+    <div class="col-8 text-right">
         <input class="hero-input" placeholder="enter your email..."/>
-      </section>
-      <section class="col-4 text-left">
+      </div>
+      <div class="col-4 text-left">
         <button class="button hero-button">Sign Up!</button>
-    </section>
-    </section>
+    </div>
+  </div>
+  </section>
+  <section class="row servicios" id="seccion03">
+    <div class="container">
+      <div class="col-4 text-center">
+        <img src="img/iconos/pantalla.jpg"/>
+        <h3>Fully Responsive</h3>
+        <p>This theme will look great on any device, no matter the size</p>
+      </div>
+      <div class="col-4 text-center">
+        <img src="img/iconos/layers.jpg"/>
+        <h3>Bootstrap 4 ready</h3>
+        <p>Featuring the latest build on the new Bootstrap 4 framework!</p>
+        </div>
+      <div class="col-4 text-center">
+        <img src="img/iconos/check.jpg"/>
+        <h3>Easy to use</h3>
+        <p>Ready to use with your own content, or customize the source files!</p>
+      </div>
+  </div>
   </section>
 </body>
 </html>
