grid de features seccion04 con imagenes, titulos y párrafo

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <h2 class="hero-image--tittle">Build a landing page for your bussiness or projrct and generate more leads!</h2>
     <div class="col-8 text-right">
         <input class="hero-input" placeholder="enter your email..."/>
-      </div>
-      <div class="col-4 text-left">
+    </div>
+    <div class="col-4 text-left">
         <button class="button hero-button">Sign Up!</button>
     </div>
   </div>
@@ -53,6 +53,29 @@
         <p>Ready to use with your own content, or customize the source files!</p>
       </div>
   </div>
+  </section>
+  <section class="row gridFeatures" id="seccion04">
+    <div class="col-6 gridFeatures-cell">
+      <h3>Fully Responsive Design</h3>
+      <p>When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+    </div>
+    <div class="col-6 gridFeatures-cell--img">
+      <img class="" src="img/bg-showcase-1.jpg"/>
+    </div>
+    <div class="col-6 gridFeatures-cell--img">
+        <img class="" src="img/bg-showcase-2.jpg"/>
+    </div>
+    <div class="col-6 gridFeatures-cell">
+      <h3>Updated For Bootstrap 4</h3>
+      <p>Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+    </div>
+    <div class="col-6 gridFeatures-cell">
+      <h3>Easy to Use & Customize</h3>
+      <p>Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+    </div>
+    <div class="col-6 gridFeatures-cell--img">
+      <img class="" src="img/bg-showcase-3.jpg"/>
+    </div>
   </section>
 </body>
 </html>
