ajustes finales del template

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Template Bootstrap</title>
   <link rel="stylesheet" type="text/css" href="css/grid360.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
@@ -77,5 +78,87 @@
       <img class="" src="img/bg-showcase-3.jpg"/>
     </div>
   </section>
+  <section class="row saying" id="seccion05">
+    <section class="container">
+      <section class="col-12">
+        <h2 class="saying_title">What people are saying...</h2>
+      </section>
+    <section class="col-4 perfil">
+      <img src="img/testimonials-1.jpg">
+      <p class="saying_Nombre"><strong>Margaret E.</strong></p>
+      <p class="saying_Nombre--desc">"this is Fantastic! Thanks so much guys!"</p>
+    </section>
+    <section class="col-4 perfil">
+      <img src="img/testimonials-2.jpg">
+      <p class="saying_Nombre"><strong>Fred S.</strong></p>
+      <p class="saying_Nombre--desc">"Bootstrap is amazing. I`ve been using it to create tools of super nice landing pages."</p>
+    </section>
+    <section class="col-4 perfil">
+      <img src="img/testimonials-3.jpg">
+      <p class="saying_Nombre"><strong>Sarah W.</strong></p>
+      <p class="saying_Nombre--desc">"Thanks so much for making these tree resources available to us!"</p>
+    </section>
+    </section>
+  </section>
+  <section class="row newsletter" id="seccion06">
+    <section class="container">
+      <section class="col-12 text-center">
+        <h2 class="saying_title">Ready to get stared? Sign Up now!</h2>
+      </section>
+      <section class="col-12">
+        <div class="col-8 text-right">
+            <input class="hero-input" placeholder="enter your email..."/>
+        </div>
+        <div class="col-4 text-left">
+            <button class="button hero-button">Sign Up!</button>
+        </div>
+      </section>
+    </section>
+  </section>
+  <footer class="footer" id="seccion07">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 text-left">
+            <ul class="lista">
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li >⋅</li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+              <li>⋅</li>
+              <li>
+                <a href="#">Terms of Use</a>
+              </li>
+              <li>⋅</li>
+              <li>
+                <a href="#">Privacy Policy</a>
+              </li>
+            </ul>
+            <p class="footer-text">© Your Website 2018. All Rights Reserved.</p>
+          </div>
+          <div class="col-4 text-right">
+            <ul class="lista">
+              <li>
+                <a href="#">
+                  <i class="fa fa-facebook fa-2x"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa fa-twitter fa-2x"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa fa-instagram fa-2x"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
